<resources>
    <string name="app_name">LoginProject</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Sign up </string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="error_email_allready_exist">Cette email existe déja dans la base de donnée</string>
    <string name="success_message">Vous avez bien été enregistré</string>
    <string name="Confirm">CONFIRM</string>
    <string name="firstName">FirstName</string>
    <string name="name">Name</string>
    <string name="user_list">Liste des utilisateurs</string>
    <string name="database_manager">Database Manager</string>
</resources>
